Better Documentation, LuaLaTeX Script, sudo Script, Installing make
The documentation in README.md and Dockerfile has been improved.
We now also provide a script for compiling documents with LuaLaTeX.

A fake "sudo" script has been added: we really don't need sudo, and if
we don't need any of sudo's arguments, we can just directly invoke the
command to-be-sudoed directly.

We now also install "make", as the USTC slides template may need it, see
https://github.com/ustctug/ustcthesis

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -2,7 +2,11 @@
 # thomasweise/texlive
 #
 # This is an image with a basic TeX Live installation.
-# 
+# Source: https://github.com/thomasWeise/docker-texlive/
+# License: GNU GENERAL PUBLIC LICENSE, Version 3, 29 June 2007
+# The license applies to the way the image is built, while the
+# software components inside the image are under the respective
+# licenses chosen by their respective copyright holders.
 # 
 FROM ubuntu:16.04
 MAINTAINER Thomas Weise <tweise@ustc.edu.cn>
@@ -27,6 +31,7 @@ RUN export LANG=C.UTF-8 &&\
                           xfonts-intl-chinese-big &&\
 # install TeX Live and ghostscript
     apt-get install -f -y ghostscript=9.18* \
+                          make=4.1* \
                           latex-cjk-common=4.8* \
                           latex-cjk-chinese=4.8* \ 
                           texlive-full=2015.2016* \
@@ -39,7 +44,8 @@ RUN export LANG=C.UTF-8 &&\
                           texlive-science=2015.2016* \
                           texlive-xetex=2015.2016* &&\
 # free huge amount of unused space
-    apt-get purge -f -y texlive-fonts-extra-doc \
+    apt-get purge -f -y make-doc \
+                        texlive-fonts-extra-doc \
                         texlive-fonts-recommended-doc \
                         texlive-humanities-doc \
                         texlive-latex-base-doc \
