Better tex.sh, New Entry Point, Better Font Management
tex.sh now only performs one compiler step, even after BibTeX was
called. Reason: We will loop until nothing changes anyway.

fontcall.sh has been removed, instead we do fc-cache in __boot__.sh,
which is also our new entry point.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -67,3 +67,5 @@ RUN export LANG=C.UTF-8 &&\
 VOLUME ["/doc/", "/usr/share/fonts/external/"]
 
 ADD scripts /bin/
+
+ENTRYPOINT ["/bin/__boot__.sh"]
