add pandoc & pandoc-citeproc for convenience (#1)
* add pandoc & pandoc-citeproc for convenience

* should be `install` instead of `purge`

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -44,6 +44,9 @@ RUN export LANG=C.UTF-8 &&\
                           texlive-pstricks=2015.2016* \
                           texlive-science=2015.2016* \
                           texlive-xetex=2015.2016* &&\
+# install pandoc
+    apt-get install -f -y pandoc \
+                          pandoc-citeproc &&\
 # free huge amount of unused space
     apt-get purge -f -y make-doc \
                         texlive-fonts-extra-doc \
