Complete Change of Structure, now depending on thomasweise/docker-pandoc

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ hs_err_pid*
 /out
 /.gradle
 /dependency-reduced-pom.xml
+.Rproj.user
+
+.Rhistory
+.RData
+.Ruserdata
+docker-texlive.Rproj
+*.Rproj
